--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.xuhao.todo.MainActivity">
+    tools:context="com.example.xuhao.todo.MyActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,9 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+    <include layout="@layout/content_my" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
